--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,10 @@ dependencies {
 
     // For AdMob
     implementation 'com.google.android.gms:play-services-ads:21.3.0'
+
+    // For Implementing App Open Ad
+    implementation "androidx.lifecycle:lifecycle-process:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-runtime:2.5.1"
+        // noinspection LifecycleAnnotationProcessorWithJava8
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.5.1"
 }
